# nix-flake-poetry-demo

./: README.md  flake.nix  pyproject.toml  shell.nix
src/: main.py
